primera pantalla de carga

--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,11 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+//
+
+$grisF:                       #F5F5F8;
+$negro:                       #000000;
+$grisL:                       #9E9E9E;
+$azulE:                       #2F80ED;
+$azulE2:                      #56CCF2;
+$azulE2:                      #2D5E9F;
