--- a/src/app/pages/inapp/inapp.page.scss
+++ b/src/app/pages/inapp/inapp.page.scss
@@ -1,9 +1,10 @@
+@import '../../../global.scss';
 ion-content {
     --background:#F5F5F8;
 }
+ion-icon {
+    color: #56CCF2;
+  }
 ion-tab-bar, ion-tab-button{
     background-color:white;
    }
-  //ion-icon {
-    //color: #56CCF2;
- // }
