--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,27 +1,42 @@
-<ion-header>
-  
+<ion-header  class="ion-no-border">
+  <ion-toolbar>
+    <!-- <ion-title>login</ion-title> -->
+  </ion-toolbar>
 </ion-header>
-
 <ion-content>
-  <div><h1 class="h1">PeriOpera</h1></div>
-    <img   class="img" src="../../../assets/img/logo1.png" alt="">
-   
-  <div class="semiblog">
-    <img class="loading"src="../../../assets/img/cargando.gif" alt="">
-    <h4 class="h3">Una aplicacion pensada  para tu bienestar</h4>
-      <h5 class="h5">organizan</h5> 
-  </div>
-  <div class="logos">
-    <img class="logou" src="../../../assets/img/logoCu.png" alt="">
-     <img class="logou"  src="../../../assets/img/logoN.png" alt="">
-
-  </div>
-   <div>
-     <h6 class="h5sub">Grupo de investigacion perioperatorio</h6>
-     <h6 class="h5sub">Grupo de investigacion GINDESOFT</h6>
-     <h6 class="h5sub">Grupo de investigacion VERITAS AID</h6>
-     
-   </div>
-  
-
+<ion-card class="ion-no-margin">
+  <ion-img src="assets/img/logo1.png"></ion-img>
+  <ion-card-header>
+  <ion-card-title>
+     Bienvenidos a PeriOpera
+  </ion-card-title>
+  <ion-card-subtitle class="ion-text-lowercase">
+    ¡Inicia sesión para ver tu información o regístrate para que comiences a gestionar tus procesos!
+  </ion-card-subtitle>
+  </ion-card-header>
+  <ion-card-content>
+    <div class="signin-btns">
+        <ion-button  size="small" fill="solid" shape="round" class="loginbtn">
+         Iniciar Sesión 
+        </ion-button>
+        <ion-button  size="small" fill="outline" shape="round" color="light">
+          Regístrate
+        </ion-button>
+      </div>
+      <div class="text-tag">
+      <span>O inicia con tus redes sociales</span>
+      </div>
+      <div class="social-btns">
+          <ion-button fill="clear"  class="facebookbtn ion-no-padding">
+        <ion-img src="assets/imagenes/facebook.png"></ion-img>
+          </ion-button>
+          <ion-button fill="clear"  class="googlebtn ion-no-padding">
+        <ion-img src="assets/imagenes/google.png"></ion-img>
+          </ion-button>
+          <ion-button fill="clear"  class="applebtn ion-no-padding">
+        <ion-img src="assets/imagenes/apple.png"></ion-img>
+          </ion-button>
+        </div>
+  </ion-card-content>
+</ion-card>
 </ion-content>
