--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,49 +1,71 @@
-@import '../../../global.scss';
-ion-content {
-    --background:#F5F5F8;
+ion-content{
+    --ion-background-color: #F5F5F8;
 }
-.h1{
-    
-    color: black;
-    margin-top: 3rem;
-    margin-left:8.8rem;
-    font-weight: 500;
+ion-header{
+    position: absolute;
 }
-.h3{
-    
-    color: #9E9E9E;
-    margin-left:3.5rem;
+ion-toolbar {
+    --border-style: none;
+    --ion-background-color:transparent;
+    --opacity:0;
+  }
+  ion-card{
+    background-color: transparent !important;
+    padding: 0 !important;
+  }
   
-}
-.h5{
-    
-    color: #9E9E9E;
-    margin-left:10rem;
   
-}
-.img{
-     
-    width: 300px;
-    margin-left: 3rem;
-    margin-top: 3rem;
-}
-
-
-
-.logou{
-     width:160px;
-
-}
-
-.logos{
-
-    margin-left: 2.8rem;
-}
-.h5sub{
-    color: #9E9E9E;
-    margin-left:3rem;
-}
-.loading{
-    width: 40px;
-    margin-left: 11rem;
-}
+  
+  ion-card-title{
+    margin-top: 30px;
+    font-size: 20px;
+    color:#080808;
+    text-align:center;
+    font-weight: 600;
+  }
+  
+  ion-card-subtitle{
+    padding-top: 15px;
+    font-size:11px;
+    color:#898585;
+    text-align: center;
+    font-weight: 300;
+  }
+  
+  ion-header{
+    position: absolute;
+  }
+  
+  ion-card{
+    --ion-background-color:transparent;
+  box-shadow: none !important;
+  }
+  
+  .signin-btns{
+    margin-top: 35px;
+    text-align: center;
+    color:#F0F4FA;
+  }
+  
+  .loginbtn{
+    --ion-color-primary:#215AB7;
+  }
+  
+  .text-tag{
+    margin-top: 40px;
+    text-align: center;
+    span{
+      font-size: 13px;
+      font-weight: normal;
+      color:#898585;
+    }
+  }
+  
+  .social-btns{
+    margin-top: 30px;
+    text-align: center;
+    ion-button{
+      width:40px;
+      padding-left: 5px !important;
+    }
+  }
