--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,63 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
   </ion-header>
+
+<ion-item lines="none" style="--background:#f1f5f8;" >
+<ion-avatar slot="end" style="position: static;width: 42.86px;height: 42.86px;left: 3.57px;top: 3.57px;">
+    <img src="assets/imagenes/doctor.jpg">
+  </ion-avatar>
+    <ion-title style="position: static; width: 277px; height: 32px;left: 0px;top: 9px;">
+      <h4>¡Hola Jhonatan!</h4>
+    </ion-title>
+</ion-item>
+
+
+  <ion-grid>
+
+    <ion-card button="true">
+        <ion-item lines="none" style="padding:0px !important;">
+        <ion-thumbnail slot="end"  style=" border: none !important;width: 69px;height: 69px;left: 24px; top: 4px;">
+          <img src="assets/imagenes/image 5.png">
+        </ion-thumbnail>
+          <h5>Iniciar nuevo proceso</h5>
+      </ion-item>
+    </ion-card>
+
+    <ion-card button="true">
+      <ion-item lines="none" style="padding:0px !important;">
+      <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
+        <img src="assets/imagenes/electro.png">
+      </ion-thumbnail>
+        <h5>Mis procesos</h5>
+    </ion-item>
+  </ion-card>
+
+  <ion-card button="true">
+    <ion-item lines="none" style="padding:0px !important;">
+    <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
+      <img src="assets/imagenes/suero.jpg">
+    </ion-thumbnail>
+      <h5>Reporte de <br/>síntomas</h5>
+    </ion-item>
+  </ion-card>
+
+  <ion-card button="true">
+    <ion-item lines="none" style="padding:0px !important;">
+    <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
+      <img src="assets/imagenes/doctor.jpg">
+    </ion-thumbnail>
+      <h5>Mis alertas</h5>
+    </ion-item>
+  </ion-card>
+
+  <ion-card button="true">
+    <ion-item lines="none" style="padding:0px !important;">
+    <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
+      <img src="assets/imagenes/esteto.jpg">
+    </ion-thumbnail>
+      <h5>Descarga de <br/> procesos</h5>
+    </ion-item>
+  </ion-card>
+
+  </ion-grid>
 </ion-content>
