--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -3,4 +3,8 @@ ion-content {
 }
 ion-tab-bar, ion-tab-button{
     background-color:white;
+    border: 0 !important;
+    box-shadow: none !important;
+    border: none !important;
+    border-style: none !important;
    }
