--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,5 +1,24 @@
-<ion-header>
-</ion-header>
-<ion-content>
-    
-</ion-content>
+<ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+    </ion-header>
+  
+    <ion-item lines="none" style="--background:#f1f5f8;" style="background: white;" >
+        <ion-title style="position: static; width: 277px; height: 32px;">
+          <h4>Configuración</h4>
+        </ion-title>
+    </ion-item>
+
+  <ion-grid style="--background:white;">
+    <div>
+      <ion-avatar style="margin: 0 auto;">
+        <img src="assets/imagenes/doctor.jpg" />
+      </ion-avatar>
+    </div>
+  </ion-grid>
+  <ion-list  style="--background:#f1f5f8; background: #f1f5f8;">
+    <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" >
+      <ion-label style="color:black">Label</ion-label>
+    </ion-item>
+  </ion-list>
+
+  </ion-content>
