--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -3,22 +3,51 @@
     </ion-header>
   
     <ion-item lines="none" style="--background:#f1f5f8;" style="background: white;" >
-        <ion-title style="position: static; width: 277px; height: 32px;">
+        <ion-title style="width: 277px; height: 32px;">
           <h4>Configuración</h4>
         </ion-title>
     </ion-item>
 
   <ion-grid style="--background:white;">
     <div>
-      <ion-avatar style="margin: 0 auto;">
-        <img src="assets/imagenes/doctor.jpg" />
+      <ion-avatar style="margin: auto;">
+        <img src="assets/imagenes/doctor.jpg"/>
       </ion-avatar>
     </div>
   </ion-grid>
+
+
   <ion-list  style="--background:#f1f5f8; background: #f1f5f8;">
-    <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" >
-      <ion-label style="color:black">Label</ion-label>
+    <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" button="true" detail="false">
+        <ion-icon slot="start" src="assets/imagenes/Vector.svg" style="font-size: 13.33px; position:absolute"></ion-icon>
+        <ion-label style="color:black; position:absolute">Cuenta</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
     </ion-item>
+    <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" button="true" detail="false">
+        <ion-icon slot="start" src="assets/imagenes/1.svg" style="font-size: 13.33px; position:absolute"></ion-icon>
+        <ion-label style="color:black; position:absolute">Notificaciones</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" detail="false" button="true">
+        <ion-icon slot="start" src="assets/imagenes/6.svg" style="font-size: 13.33px; position:absolute"></ion-icon>
+        <ion-label style="color:black; position:absolute">Apariencia</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" detail="false" button="true">
+        <ion-icon slot="start" src="assets/imagenes/2.svg" style="font-size: 13.33px;position:absolute"></ion-icon>
+        <ion-label style="color:black;position:absolute">Políticas & Seguridad</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" detail="false" button="true">
+        <ion-icon slot="start" src="assets/imagenes/3.svg" style="font-size: 13.33px;position:absolute"></ion-icon>
+        <ion-label style="color:black;position:absolute">Sonido</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
+      <ion-item lines="none" style="--background:#f1f5f8; background: #f1f5f8;" detail="false"  button="true">
+        <ion-icon slot="start" src="assets/imagenes/5.svg" style="font-size: 13.33px;position:absolute"></ion-icon>
+        <ion-label style="color:black;position:absolute">Idioma</ion-label>
+        <ion-icon  slot="end" name="chevron-forward-outline"></ion-icon>
+      </ion-item>
   </ion-list>
 
   </ion-content>
