--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -36,7 +36,6 @@ ion-item {
       font-weight: bold;
       letter-spacing: -0.5px;
     }
-
 }
 ion-card{
     border: 0 !important;
@@ -66,7 +65,10 @@ ion-card{
         margin: 0px 10px;
     }
 }
-
+ion-card:hover ion-item  {
+    background-color: slategray !important;
+    transform: scale(0.8);
+ }
 ion-card-content{
     background:white;
-    }
+}
