--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -69,3 +69,17 @@ ion-toolbar {
       padding-left: 5px !important;
     }
   }
+#tabs{
+
+
+}  
+#img{
+  width:250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.tabs-one:hover{
+  border-bottom-width: 1px solid #545654;
+}
