--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,13 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
   </ion-header>
+  <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
+    <ion-title>
+      <label id="titulo">Reporte de Síntomas</label>
+    </ion-title>
+  </ion-item>
+
+
+
+
 </ion-content>
