--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,18 +1,17 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
   </ion-header>
-
-  <ion-item lines="none" style="--background:#f1f5f8;">
-    <ion-avatar slot="end" style="position: static;width: 42.86px;height: 42.86px;left: 3.57px;top: 3.57px;">
+  <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
+    <ion-avatar slot="end">
       <img src="assets/imagenes/doctor.jpg">
     </ion-avatar>
-    <ion-title style="position: static; width: 277px; height: 32px;left: 0px;top: 9px;">
-      <h4>¡Hola Jhonatan!</h4>
+    <ion-title>
+      <label id="titulo">¡Hola Jhonatan!</label>
     </ion-title>
   </ion-item>
   <ion-grid>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;" id="box1">
+      <ion-item lines="none" style="padding:0px !important;">
         <ion-thumbnail slot="end" style=" border: none !important;width: 69px;height: 69px;left: 24px; top: 4px;">
           <img src="assets/imagenes/image 5.png">
         </ion-thumbnail>
