--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -15,3 +15,89 @@ ion-content {
     font-weight: bold;
     letter-spacing: -0.5px;
 }
+
+#espacio{
+    height: 18vh;
+    width: 120%;
+    margin-left: -5.0vh;
+    margin-top: -5px;
+    --background:#F5F5F8;
+}
+ion-icon {
+    color: black;
+  }
+  ion-card{
+    border: 0 !important;
+    box-shadow: none !important;
+    border: none !important;
+    border-style: none !important;
+    --background-color: white;
+    background: #FFFFFF;
+    position: static;
+    left: 46px;
+    top: 319px;
+    box-shadow: 0px 10px 40px;
+    border-radius: 20px;
+  }
+  ion-card-content{
+    background-color:white;
+}
+ion-item {
+    --background: white;
+    --background-color: white;
+    --color:white;
+}
+label{
+    position: static;
+    width: 275px;
+    height: 26px;
+    left: 36px;
+    top: 0px;
+    font-style: normal;
+    font-weight: 550;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: -0.5px;
+    color:black;
+    left: calc(50% - 209px/2 - 51px);
+    top: calc(50% - 26px/2);
+    display: flex;
+    align-items: center;
+    flex: none;
+    order: 0;
+    flex-grow: 1;
+    margin: 0px 10px;
+}
+ion-card:hover, ion-item:hover  {
+    background-color: white !important;
+    transform: scale(0.9);
+ }
+ ion-card-content{
+     
+     text-align: center;
+     font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 21px;
+    color: #000000;
+    p{
+        text-align: center;
+        font-style: normal;
+       font-weight: 300;
+       font-size: 15px;
+       line-height: 21px;
+       color: #000000;
+    }
+ }
+ #mic{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ }
+
+ ion-button {
+    --border-radius:50px;
+    height: 96px;
+    width: 96px;
+    --background: white;
+}
