--- a/src/app/pages/tipousuario/tipousuario.page.html
+++ b/src/app/pages/tipousuario/tipousuario.page.html
@@ -3,7 +3,10 @@
   </ion-header>
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
     <ion-title>
-      <h5 id="titulo">PerioPera</h5>
+      <h5 id="titulo">Reporte de Síntomas</h5>
     </ion-title>
   </ion-item>
+
+
+  
 </ion-content>
