--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,7 +11,7 @@
   </ion-item>
   <ion-grid>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="uno">
         <ion-thumbnail slot="end" style=" border: none !important;width: 69px;height: 69px;left: 24px; top: 4px;">
           <img src="assets/imagenes/image 5.png">
         </ion-thumbnail>
@@ -19,7 +19,7 @@
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="dos">
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/electro.png">
         </ion-thumbnail>
@@ -27,7 +27,7 @@
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="tres">
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/suero.jpg">
         </ion-thumbnail>
@@ -35,7 +35,7 @@
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="cuatro">
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/doctor.jpg">
         </ion-thumbnail>
@@ -43,7 +43,7 @@
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="cinco">
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/esteto.jpg">
         </ion-thumbnail>
