--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -68,7 +68,7 @@ label{
     flex-grow: 1;
     margin: 0px 10px;
 }
-ion-card:hover, ion-item:hover  {
+ion-card:hover, #uno:hover, #dos:hover  {
     background-color: white !important;
     transform: scale(0.9);
  }
