--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -54,7 +54,7 @@ ion-card{
         margin: 0px 10px;
     }
 }
-ion-card:hover, ion-item:hover  {
+ion-card:hover, #uno:hover, #dos:hover, #tres:hover, #cuatro:hover, #cinco:hover  {
     background-color: white !important;
     transform: scale(0.9);
  }
