--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,25 +1,23 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
   </ion-header>
-
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
     <ion-title>
-      <label id="titulo">Reporte de Síntomas</label>
+      <h5 id="titulo">Reporte de Síntomas</h5>
     </ion-title>
   </ion-item>
-
 <ion-grid id="espacio">
 </ion-grid>
 
   <ion-grid>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Lista de síntomas</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
-      <ion-item lines="none" style="padding:0px !important;">
+      <ion-item lines="none" style="padding:0px !important;"  id="dos">
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         <label>Otros síntomas</label>
       </ion-item>
