--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,8 +5,8 @@
     <ion-avatar slot="end">
       <img src="assets/imagenes/doctor.jpg">
     </ion-avatar>
-    <ion-title>
-      <label id="titulo">¡Hola Jhonatan!</label>
+    <ion-title id="titulo">
+      <ion-label>¡Hola Jhonatan!</ion-label>
     </ion-title>
   </ion-item>
   <ion-grid>
