--- a/src/app/pages/tipousuario/tipousuario.page.html
+++ b/src/app/pages/tipousuario/tipousuario.page.html
@@ -2,8 +2,8 @@
   <ion-header collapse="condense">
   </ion-header>
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
-    <ion-title id="titulo">
-      <ion-label>Reporte de Síntomas</ion-label>
+    <ion-title>
+      <h5 id="titulo">Tipo de Usuario</h5>
     </ion-title>
   </ion-item>
 <ion-grid id="espacio">
@@ -13,26 +13,14 @@
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
-        <label>Lista de síntomas</label>
+        <label>Profesional de la Salud</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
       <ion-item lines="none" style="padding:0px !important;"  id="dos">
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
-        <label>Otros síntomas</label>
+        <label>Paciente</label>
       </ion-item>
     </ion-card>
   </ion-grid>
-
-  <ion-grid>
-    <ion-card>
-      <ion-card-content>
-        ¿No puedes encontrar tu síntoma? 
-        <p>¡Usa tu micrófono y nosotros lo encontraremos por tí!</p>
-      </ion-card-content>
-    </ion-card>
-  </ion-grid>
-  <ion-button id="mic">
-    <img src="assets/imagenes/mic.png" alt="">
-  </ion-button> 
 </ion-content>
