--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -7,4 +7,9 @@ ion-tab-bar, ion-tab-button{
     box-shadow: none !important;
     border: none !important;
     border-style: none !important;
+    height: 45px;
+    left: 0px;
+    right: 0px;
+    top: 806px;
+    box-shadow: 0px -1px 4px
    }
