--- a/src/app/pages/listasintomas/listasintomas.page.html
+++ b/src/app/pages/listasintomas/listasintomas.page.html
@@ -1,12 +1,19 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header>
   </ion-header>
+
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref='/tab2' style="color:black"></ion-back-button>
+   </ion-buttons>
+  </ion-toolbar>
+  
     <ion-card id="carta">
       <ion-item lines="none" style="padding:0px !important;" id="borde" >
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/electro.png">
         </ion-thumbnail>
-        <h5>Lista de Síntomas</h5>
+        <h5>¿Cómo me siento?</h5>
       </ion-item>
     </ion-card>
     <ion-grid>
