--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,10 +10,10 @@
 </ion-grid>
 
   <ion-grid id="botones">
-    <ion-card button="true">
+    <ion-card button="true" (click)="lista()">
       <ion-item lines="none" style="padding:0px !important;" id="uno"> 
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
-        <label>Lista de síntomas</label>
+        <label>¿Cómo me siento?</label>
       </ion-item>
     </ion-card>
     <ion-card button="true">
