--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,64 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
   </ion-header>
+
+  <ion-card id="carta">
+    <ion-item lines="none" style="padding:0px !important;" id="borde" >
+      <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
+        <img src="assets/imagenes/doctor.jpg">
+      </ion-thumbnail>
+      <h5>Alertas</h5>
+    </ion-item>
+  </ion-card>
+<ion-grid>
+  <ion-row>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+    <ion-col size="6">
+      <ion-card style="height: 124px;">
+        <ion-item lines="none" style="padding:0px !important;"> 
+          <label></label>
+        </ion-item>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+<ion-fab horizontal="end" vertical="bottom" slot="fixed">
+  <ion-fab-button style="color: #56CCF2">
+    <ion-icon name="add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
 </ion-content>
