michael cambios a back

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
       <img src="assets/imagenes/doctor.jpg">
     </ion-avatar>
     <ion-title id="titulo">
-      <ion-label>¡Hola Jhonatan!</ion-label>
+      <ion-label>{{dataUser.data.name}}</ion-label>
     </ion-title>
   </ion-item>
   <ion-grid>
