--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -19,7 +19,7 @@
 
   <ion-item lines="none" style="--background:#f1f5f8; text-align: center;">
     <ion-title>
-      <label id="nombreperfil">Jhonatan</label>
+      <label id="nombreperfil">{{dataUser.data.name}}</label>
     </ion-title>
   </ion-item>
 
