--- a/src/app/pages/log-one/log-one.page.html
+++ b/src/app/pages/log-one/log-one.page.html
@@ -1,13 +1,13 @@
 <ion-content id="content">
   <div id ="forms">
     <ion-item class="items">
-      <ion-label class="label" position="floating">Correo electronico</ion-label>
-      <ion-input ></ion-input>
+      <ion-label  placeholder="email" class="label" position="floating">Correo electronico</ion-label>
+      <ion-input  [(ngModel)]="registro.email"></ion-input>
     </ion-item>
     <ion-item class="items">
       <ion-label class="label" position="floating">Contraseña</ion-label>
-      <ion-input ></ion-input>
+      <ion-input name="password" type="password"[(ngModel)]="registro.password"></ion-input>
     </ion-item>
   </div>
-  <ion-button id="buttonI">Iniciar</ion-button>
+  <ion-button (click)=" LoginUp()" id="buttonI">Iniciar</ion-button>
 </ion-content>
