--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,7 +26,7 @@
         <h5>Mis procesos</h5>
       </ion-item>
     </ion-card>
-    <ion-card button="true">
+    <ion-card button="true" (click)="nextPage()">
       <ion-item lines="none" style="padding:0px !important;" id="tres">
         <ion-thumbnail slot="end" style=" width: 69px;height: 108px;left: 24px; top: 4px;">
           <img src="assets/imagenes/suero.jpg">
