--- a/src/app/pages/draw-anatomye/draw-anatomye.page.html
+++ b/src/app/pages/draw-anatomye/draw-anatomye.page.html
@@ -2,58 +2,58 @@
   <h2 class="title" *ngIf="disable">Selecciona el area que te duele</h2>
   <h2 class="title" *ngIf="change">Esta es tu area afectada?</h2>
   <ion-card *ngIf="changeAnatomy" id="imgAnatomia">
-    <img src="../../../assets/imagenes/Anatomico.jpg" alt="">
+    <img src="../../../assets/imagenes/Dibujo anatómico.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cabeza' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/cabeza.jpg "alt="">
   </ion-card>
   <ion-card *ngIf="position === 'rostro' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/rostro.png "alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cuello' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/cuello.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'toraxDere' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/tórax der.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'toraxIzqui' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/tórax izq.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'brazoDere' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/brazo der.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'brazoIzq' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/brazo izq.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cuadSupeIz' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/abdomen 1superiorderecho.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cuadSupeDer' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/abdomen 1superiorderecho.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cuadInfeIz' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/abdomen 4infeizqu.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cuadInfeDer' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/abdomen 3infederec.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'cadera' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/Anatomico.jpg" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'genitales' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/ingle-genital.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'muslo' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/pierna der.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'rodilla' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/rodilla der.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'piernaIfe' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/canilla der.png" alt="">
   </ion-card>
   <ion-card *ngIf="position === 'pies' && change " id="imgAnatomia">
-    <img src="../../../assets/imagenes/cabeza.jpg" alt="">
+    <img src="../../../assets/imagenes/pie der.png" alt="">
   </ion-card>
   <div *ngIf="disable">
     <ion-item class="items">
